--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "4.10.2",
-    "socket.io": "1.2.0"
+    "socket.io": "1.2.0",
+    "ejs": "~2.5.1",
+    "cookie-parser": "~1.4.3",
+    "body-parser": "~1.15.2",
+    "fs": "0.0.1-security"
   }
 }
